lineheight to fix cutoff text

--- a/src/containers/Sidebar/Subscriptions/Subscription/Subscription.scss
+++ b/src/containers/Sidebar/Subscriptions/Subscription/Subscription.scss
@@ -10,6 +10,7 @@
       margin-right: 20px !important;
     }
     span {
+      line-height: 28px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
